# Culino

./: .gitignore  LICENSE  README.md  run-all.sh
backend/: .env.example  .env.prod.example  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/.github/workflows/: ci.yml
backend/common/: Cargo.toml  README.md
backend/common/src/: auth.rs  behavior.rs  config.rs  error.rs  lib.rs  pagination.rs  redis.rs  response.rs  s3.rs  sql.rs  tx.rs
backend/deploy/: prod.sh
backend/deploy/nginx/: culino.conf
backend/docs/: AI功能完成.md  AI集成方案.md  RATE_LIMITING.md  RATE_LIMITING_FIX.md  database-er.md  功能文档.md  架构设计.md
backend/features/ai/: Cargo.toml
backend/features/ai/src/: deepseek.rs  handler.rs  lib.rs  model.rs  nutrition.rs  preference.rs  recognition.rs  recommendation.rs  repo.rs
backend/features/ingredient/: Cargo.toml  README.md
backend/features/ingredient/src/: lib.rs
backend/features/ingredient/src/handler/: ingredient.rs  seasoning.rs  tag.rs
backend/features/ingredient/src/repo/: ingredient_repo.rs  seasoning_repo.rs  tag_repo.rs
backend/features/recipe/: Cargo.toml  README.md
backend/features/recipe/src/: handler.rs  lib.rs  model.rs  repo.rs  service.rs
backend/features/social/: Cargo.toml  README.md
backend/features/social/src/: handler.rs  lib.rs  model.rs
backend/features/social/src/repo/: comment_repo.rs  cooking_log_repo.rs  favorite_repo.rs  like_repo.rs
backend/features/tool/: Cargo.toml  README.md
backend/features/tool/src/: handler.rs  lib.rs  model.rs
backend/features/tool/src/repo/: meal_plan_repo.rs  mod.rs  shopping_repo.rs
backend/features/upload/: Cargo.toml  README.md
backend/features/upload/src/: handler.rs  lib.rs  model.rs
backend/features/user/: Cargo.toml  README.md
backend/features/user/src/: handler.rs  lib.rs  model.rs  repo.rs
backend/migrations/: 20260422025631_yscc.sql  20260427194001_ai_features.sql  20260429120000_nutrition_enhance.sql  20260429180000_likes_comments.sql  20260506120000_amount_to_varchar.sql  20260512100000_invite_codes.sql
backend/scripts/: test_rate_limit.sh
backend/src/: banner.rs  check.rs  cli.rs  main.rs  openapi.rs  router.rs  server.rs  tracing.rs
frontend/: BUILD.bazel  README.md  WORKSPACE.bazel  gradle.properties  settings.gradle.kts
frontend/.run/: android-debug.sh  android-release.sh  ios-debug.sh  web-debug.sh
frontend/app/: build.gradle.kts
frontend/app/iosApp/Configuration/: Config.xcconfig
frontend/app/iosApp/iosApp.xcodeproj/: project.pbxproj
frontend/app/iosApp/iosApp.xcodeproj/project.xcworkspace/xcuserdata/bilibili.xcuserdatad/: UserInterfaceState.xcuserstate
frontend/app/src/androidMain/: AndroidManifest.xml
frontend/app/src/androidMain/kotlin/com/culino/app/: CulinoApplication.kt  MainActivity.kt
frontend/app/src/androidMain/res/drawable/: ic_launcher_foreground.xml
frontend/app/src/commonMain/kotlin/com/culino/app/: App.kt  Navigation.kt
frontend/app/src/iosMain/kotlin/com/culino/app/: MainViewController.kt
frontend/app/src/wasmJsMain/kotlin/com/culino/app/: Main.kt
frontend/app/src/wasmJsMain/resources/: index.html
frontend/docs/: AI功能产品设计文档.md  Debug调试指南.md  模块说明.md  编译修复说明.md  编译问题最终修复.md
frontend/docs/superpowers/specs/: 2026-04-23-menu-mobile-design.md
frontend/gradle/: libs.versions.toml
frontend/src/common/api/: build.gradle.kts
frontend/src/common/model/: build.gradle.kts
frontend/src/common/ui/: BUILD.bazel  build.gradle.kts
frontend/src/common/util/: BUILD.bazel  build.gradle.kts
frontend/src/feature/ingredient/: build.gradle.kts
frontend/src/feature/recipe/: build.gradle.kts
frontend/src/feature/social/: build.gradle.kts
frontend/src/feature/tool/: build.gradle.kts
frontend/src/feature/user/: BUILD.bazel  build.gradle.kts
frontend/src/framework/media/: build.gradle.kts
frontend/src/framework/network/: BUILD.bazel  build.gradle.kts
frontend/src/framework/storage/: BUILD.bazel  build.gradle.kts
menu-backend/: .env.example  .gitignore  AI_COMPLETE.md  AI_INTEGRATION.md  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
menu-backend/.github/workflows/: ci.yml
menu-backend/common/: Cargo.toml  README.md
menu-backend/common/src/: auth.rs  config.rs  lib.rs  pagination.rs  redis.rs  response.rs  s3.rs  state.rs  tx.rs
menu-backend/docs/: AI功能完成.md  AI集成方案.md  RATE_LIMITING.md  RATE_LIMITING_FIX.md  功能文档.md  架构设计.md
menu-backend/features/ai/: Cargo.toml
menu-backend/features/ai/src/: deepseek.rs  handler.rs  lib.rs  model.rs  nutrition.rs  preference.rs  recognition.rs  recommendation.rs  repo.rs
menu-backend/features/ingredient/: Cargo.toml  README.md
menu-backend/features/ingredient/src/: lib.rs  model.rs
menu-backend/features/ingredient/src/handler/: ingredient.rs  mod.rs  seasoning.rs  tag.rs
menu-backend/features/ingredient/src/repo/: ingredient_repo.rs  mod.rs  seasoning_repo.rs  tag_repo.rs
menu-backend/features/recipe/: Cargo.toml  README.md
menu-backend/features/recipe/src/: handler.rs  lib.rs  model.rs  repo.rs  service.rs
menu-backend/features/social/: Cargo.toml  README.md
menu-backend/features/social/src/: handler.rs  lib.rs  model.rs
menu-backend/features/social/src/repo/: cooking_log_repo.rs  favorite_repo.rs  like_repo.rs  mod.rs
menu-backend/features/tool/: Cargo.toml  README.md
menu-backend/features/tool/src/: handler.rs  lib.rs  model.rs
menu-backend/features/tool/src/repo/: meal_plan_repo.rs  mod.rs  shopping_repo.rs
menu-backend/features/upload/: Cargo.toml  README.md
menu-backend/features/upload/src/: handler.rs  lib.rs
menu-backend/features/user/: Cargo.toml  README.md
menu-backend/features/user/src/: handler.rs  repo.rs
menu-backend/migrations/: 20260429120000_nutrition_enhance.sql
menu-backend/src/: cli.rs  main.rs  openapi.rs  router.rs
menu-mobile/composeApp/: BUILD.bazel  build.gradle.kts
menu-mobile/composeApp/src/androidMain/: AndroidManifest.xml
mobile/core/model/: BUILD.bazel  build.gradle.kts
(+358 files in other folders)
