[workspace]
members = ["common", "features/*"]
resolver = "3"

[workspace.dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate", "rust_decimal"] }
rust_decimal = { version = "1", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
jsonwebtoken = "9"
argon2 = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "request-id", "util"] }
tower = { version = "0.5", features = ["timeout"] }
tower_governor = "0.7"
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"] }
validator = { version = "0.20", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
redis = { version = "0.29", features = ["tokio-comp", "aio"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
culino-common = { path = "common" }
culino-user = { path = "features/user" }
culino-recipe = { path = "features/recipe" }
culino-ingredient = { path = "features/ingredient" }
culino-social = { path = "features/social" }
culino-tool = { path = "features/tool" }
culino-upload = { path = "features/upload" }
culino-ai = { path = "features/ai" }

[package]
name = "culino-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
tokio.workspace = true
sqlx.workspace = true
serde_json.workspace = true
tower-http.workspace = true
tower.workspace = true
tower_governor.workspace = true
uuid.workspace = true
redis.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
clap.workspace = true
culino-common.workspace = true
rust-s3.workspace = true
culino-user.workspace = true
culino-recipe.workspace = true
culino-ingredient.workspace = true
culino-social.workspace = true
culino-tool.workspace = true
culino-upload.workspace = true
culino-ai.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
