workspace(name = "culino_mobile")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# rules_kotlin
RULES_KOTLIN_VERSION = "1.9.6"
RULES_KOTLIN_SHA = "3b772976fec7bdcda1d84b9d39b176589424c64f6b2571c8c3bc034c7d5c1b5b"

http_archive(
    name = "rules_kotlin",
    sha256 = RULES_KOTLIN_SHA,
    url = "https://github.com/bazelbuild/rules_kotlin/releases/download/v%s/rules_kotlin-v%s.tar.gz" % (RULES_KOTLIN_VERSION, RULES_KOTLIN_VERSION),
)

load("@rules_kotlin//kotlin:repositories.bzl", "kotlin_repositories")
kotlin_repositories()

load("@rules_kotlin//kotlin:core.bzl", "kt_register_toolchains")
kt_register_toolchains()

# rules_jvm_external for Maven deps
RULES_JVM_EXTERNAL_TAG = "6.4"

http_archive(
    name = "rules_jvm_external",
    url = "https://github.com/bazelbuild/rules_jvm_external/releases/download/%s/rules_jvm_external-%s.tar.gz" % (RULES_JVM_EXTERNAL_TAG, RULES_JVM_EXTERNAL_TAG),
)

load("@rules_jvm_external//:defs.bzl", "maven_install")

maven_install(
    artifacts = [
        "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.1",
        "org.jetbrains.kotlinx:kotlinx-serialization-json:1.8.0",
        "org.jetbrains.kotlinx:kotlinx-datetime:0.6.2",
        "io.ktor:ktor-client-core:3.1.1",
        "io.ktor:ktor-client-cio:3.1.1",
        "io.ktor:ktor-client-content-negotiation:3.1.1",
        "io.ktor:ktor-serialization-kotlinx-json:3.1.1",
        "io.ktor:ktor-client-auth:3.1.1",
        "io.ktor:ktor-client-logging:3.1.1",
        "io.github.aakira:napier:2.7.1",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
        "https://maven.google.com",
    ],
)
