load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "app",
    srcs = glob(["src/commonMain/kotlin/**/*.kt"]),
    visibility = ["//visibility:public"],
    deps = [
        "//core/common",
        "//core/model",
        "//core/network",
        "//core/data",
        "//core/ui",
        "//feature/user",
    ],
)
