[package]
name = "menu-social"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
menu-common.workspace = true
axum.workspace = true
tokio.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tracing.workspace = true
utoipa.workspace = true
validator.workspace = true
