[package]
name = "menu-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
menu-common.workspace = true
axum.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tracing.workspace = true
utoipa.workspace = true
validator.workspace = true
