[package]
name = "menu-upload"
version = "0.1.0"
edition = "2024"

[dependencies]
menu-common.workspace = true
axum.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
utoipa.workspace = true
rust-s3.workspace = true
