load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

# Note: Compose Multiplatform Bazel rules are still evolving.
# This is a placeholder for when compose rules stabilize.
kt_jvm_library(
    name = "ui",
    srcs = glob(["src/commonMain/kotlin/**/*.kt"]),
    visibility = ["//visibility:public"],
)
