load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "network",
    srcs = glob(["src/commonMain/kotlin/**/*.kt", "src/jvmMain/kotlin/**/*.kt"]),
    visibility = ["//visibility:public"],
    deps = [
        "//core/common",
        "//core/model",
        "@maven//:io_ktor_ktor_client_core",
        "@maven//:io_ktor_ktor_client_cio",
        "@maven//:io_ktor_ktor_client_content_negotiation",
        "@maven//:io_ktor_ktor_serialization_kotlinx_json",
        "@maven//:io_ktor_ktor_client_auth",
        "@maven//:io_ktor_ktor_client_logging",
        "@maven//:io_github_aakira_napier",
    ],
)
